2008-09-14  vadim  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp, debugDialog.cpp, filePropDialog.cpp: enable
	"close" button in the dialog window title (it was not shown on
	Mac).

2008-09-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel_state_ops.cpp (ProjectPanel::loadLastOpenedLib):
	change in the logic applied when the program decided which library
	to open at start time. If a file is opened and there is settings
	record pointing to the library that was opened in this file last
	time the program was used, this library is opened. If there is no
	such settings record, the program tries to find the first not
	system library in the file but prefers the one named "User". If
	the program starts without data file, it shows library "User" from
	the standard objects file.

	* instDialog.cpp (instDialog::addToLog): better regex to recognize
	compiler erorrs.

	* TimeDialog.cpp (TimeDialog::loadFWObject): Changed format of the
	start and stop date fields in the Time Interval object to show
	year as four digits. Also enabled calendar in these widgets.

	* bug #2099700 "Association of the .fwb and .fwl file types with
	app". Implemented support for the association of the application
	and data file type on Windows. Double-clicking on .fwb and .fwl
	files in Explorer will now open application and load files
	automatically.

2008-09-13  Vadim Kurland  <vadim@vk.crocodile.org>

	* GroupObjectDialog.cpp (GroupObjectDialog::listContextMenu):
	fixed bug #2109833: "Crash on right mouse click in the object
	group".

	* FWWindow.cpp (FWWindow::prepareWindowsMenu): fixed bug #2109675:
	"file Title bar contains redundant info". Internal page title
	should be coordinated with items in the Windows main menu. There
	is also no need to add "Firewall Builder" to the title of internal
	windows.

	* instDialog.cpp (instDialog::interpretLogLine): fixed bug
	#2109660: "Compiler Progress: bar is incomplete". Compiler
	progress bar failed to show full length bar when operation was